# plutarch-template

./: .envrc  .gitignore  LICENSE  Makefile  README.md  flake.nix  plutarch-template.cabal
.github/workflows/: main.yml
app/: Main.hs
src/: AlwaysSucceeds.hs  Compile.hs  Utils.hs
src-checked/: Conversions.hs
src-optimized/: Conversions.hs
